# powsybl-iidm4cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  Jenkinsfile  README.md  libiidm-config.cmake.in  sonar-project.properties
examples/example1/: CMakeLists.txt  README.md  eurostag-tutorial1.xml  example1.cpp  main.cpp
examples/example2/: CMakeLists.txt  README.md
extensions/iidm/: CMakeLists.txt
extensions/iidm/resources/: LccRoundTripRef.xml  VscRoundTripRef.xml  activePowerControl.xml  branchObservabilityRoundTripRef.xml  branchObservabilityRoundTripRefInvalid.xml  coordinatedReactiveControl.xml  disMeasRef.xml  generatorEntsoeCategoryRef.xml  generatorShortCircuitRef.xml  generatorStartup.xml  generatorStartupRef-1.0-itesla.xml  generatorStartupRef-1.0.xml  hvdcAngleDroopActivePowerControl.xml  hvdcOperatorActivePowerRange.xml  injectionObservabilityRoundTripRef.xml  injectionObservabilityRoundTripRefInvalid.xml  loadDetailOldRef.xml  loadDetailRef.xml  measRef.xml  secondaryVoltageControlRef.xml  standbyAutomaton.xml  staticVarCompensatorRef.xml  substationAndLinePosition.xml  threeWindingsTransformerPhaseAngleClock.xml  threeWindingsTransformerToBeEstimated.xml  twoWindingsTransformerPhaseAngleClock.xml  twoWindingsTransformerToBeEstimated.xml  voltageLevelShortCircuitRef.xml  voltagePerReactivePowerControl.xml
extensions/iidm/src/: ActivePowerControl.cpp  ActivePowerControlAdder.cpp  ActivePowerControlXmlSerializer.cpp  BranchObservability.cpp  BranchObservabilityAdder.cpp  BranchObservabilityXmlSerializer.cpp  ControlUnit.cpp  ControlUnitAdder.cpp  ControlZone.cpp  ControlZoneAdder.cpp  Coordinate.cpp  CoordinatedReactiveControl.cpp  CoordinatedReactiveControlAdder.cpp  CoordinatedReactiveControlXmlSerializer.cpp  DiscreteMeasurement.cpp  DiscreteMeasurementAdder.cpp  DiscreteMeasurementValidationUtil.cpp  DiscreteMeasurements.cpp  DiscreteMeasurementsAdder.cpp  DiscreteMeasurementsXmlSerializer.cpp  GeneratorEntsoeCategory.cpp  GeneratorEntsoeCategoryAdder.cpp  GeneratorEntsoeCategoryXmlSerializer.cpp  GeneratorShortCircuit.cpp  GeneratorShortCircuitAdder.cpp  (+59 more)
extensions/sld/: CMakeLists.txt
src/: AssertionError.cpp  CMakeLists.txt  PowsyblException.cpp
src/iidm/: AbstractComponent.cpp  AbstractComponentsManager.cpp  AbstractConnectedComponent.cpp  AbstractMultiVariantConnectableExtension.cpp  AbstractMultiVariantIdentifiableExtension.cpp  AbstractSynchronousComponent.cpp  AbstractTerminalTopologyVisitor.cpp  ActivePowerLimits.cpp  ActivePowerLimitsAdder.cpp  ApparentPowerLimits.cpp  ApparentPowerLimitsAdder.cpp  Battery.cpp  BatteryAdder.cpp  Boundary.cpp  Branch.cpp  Bus.cpp  BusAdder.cpp  BusAdder.hpp  BusBreakerVoltageLevel.cpp  BusBreakerVoltageLevel.hpp  BusBreakerVoltageLevelBusCache.cpp  BusBreakerVoltageLevelBusCache.hpp  BusBreakerVoltageLevelState.cpp  BusBreakerVoltageLevelState.hpp  BusBreakerVoltageLevelTopology.cpp  BusBreakerVoltageLevelTopology.hpp  BusBreakerVoltageLevelVariant.cpp  BusBreakerVoltageLevelVariant.hpp  BusBreakerVoltageLevelViews.cpp  BusBreakerVoltageLevelViews.hpp  BusCache.cpp  BusCache.hpp  BusRef.cpp  BusTerminal.cpp  BusTerminal.hpp  BusTerminalViews.cpp  BusTerminalViews.hpp  BusbarSection.cpp  BusbarSectionAdder.cpp  CalculatedBus.cpp  (+159 more)
src/logging/: ConsoleLogger.cpp  ContainerLogger.cpp  Level.cpp  LogMessage.cpp  LoggerFactory.cpp  NoopLogger.cpp
src/math/: ComplexUtils.cpp  ConnectedComponentsComputationResult.cpp  GraphUtil.cpp
src/network/: BatteryNetworkFactory.cpp  EurostagFactory.cpp  FictitiousSwitchFactory.cpp  FourSubstationsNodeBreakerFactory.cpp  LoadBarExt.cpp  LoadFooExt.cpp  MultipleExtensionsTestNetworkFactory.cpp  ScadaNetworkFactory.cpp  ThreeWindingsTransformerNetworkFactory.cpp
src/stdcxx/: DateTime.cpp  Properties.cpp  demangle.cpp  exception.cpp  filesystem.cpp  math.cpp  put_time.cpp  time.cpp
src/test/: .clang-tidy  CMakeLists.txt  CommandLine.cpp  ExtensionFixture.cpp  ResourceFixture.cpp  XmlFixture.cpp
src/xml/: UncheckedXmlStreamException.cpp  XmlCharConversion.cpp  XmlStreamException.cpp  XmlStreamReader.cpp  XmlStreamWriter.cpp
test/: .clang-tidy  AssertionUtils.hpp  CMakeLists.txt  CommandLine.hpp
test/boost/: unit_test.hpp
test/iidm/: AbstractMainConnectedComponentWithSwitchTest.cpp  AbstractVscTest.cpp  ActivePowerLimitsTest.cpp  AliasesTest.cpp  ApparentPowerLimitsTest.cpp  AssertionUtils.hpp  BatteryTest.cpp  BranchTest.cpp  BusBreakerVoltageLevelTest.cpp  BusTest.cpp  BusbarSectionTest.cpp  CMakeLists.txt  ComponentsTest.cpp  CountryTest.cpp  CurrentLimitsTest.cpp  DanglingLineTest.cpp  EnergySourceTest.cpp  ExtensionAdderTest.cpp  ExtensionProvidersTest.cpp  ExtensionTest.cpp  GeneratorTest.cpp  HvdcLineTest.cpp  IdBasedBusRefTest.cpp  IdentifiableTypeTest.cpp  LccConverterStationTest.cpp  LineTest.cpp  LoadTest.cpp  NetworkExtension.cpp  NetworkExtension.hpp  NetworkFactory.cpp  NetworkFactory.hpp  NetworkIndexTest.cpp  NetworkTest.cpp  NodeBreakerConnectTest.cpp  NodeBreakerVoltageLevelTest.cpp  ObjectStoreTest.cpp  PhaseTapChangerTest.cpp  PropertiesTest.cpp  RatioTapChangerTest.cpp  ReactiveLimitsTest.cpp  (+13 more)
test/logging/: CMakeLists.txt  ConsoleLoggerTest.cpp  ContainerLoggerTest.cpp  LoggerFactoryTest.cpp  MessageFormatTest.cpp  NoopLoggerTest.cpp  logging.cpp
test/math/: CMakeLists.txt  UndirectedGraphTest.cpp  math.cpp
test/network/: CMakeLists.txt  EurostagFactoryTest.cpp  SecurityAnalysisTestNetwork.cpp  network.cpp
test/resources/: LccRoundTripRef.xml  VscRoundTripRef-tmp.xml  danglingLine.xml  eurostag-tutorial1-properties.xml  eurostag-tutorial1-tmp.xml  fictitiousSwitchRef-nbk-tmp.xml  fictitiousSwitchRef-nbk.xml  regulatingTerminal.xml  substationOptions.xml  terminalRef-tmp.xiidm  threeWindingsTransformerRoundTripRef.xml  tieline.xml
test/stdcxx/: CMakeLists.txt  CastTest.cpp  DateTimeTest.cpp  DemangleTest.cpp  MathTest.cpp  MessageFormatTest.cpp  PropertiesTest.cpp  ReferenceTest.cpp  stdcxx.cpp
test/xml/: CMakeLists.txt  XmlFixture.hpp  XmlStreamReaderTest.cpp  XmlStreamWriterTest.cpp  xml.cpp
tools/benchmark/: Benchmark.cpp  CMakeLists.txt
(+1230 files in other folders)
